# ood_detection

./: .gitignore  README.md  pyproject.toml
ood_detection/: __main__.py  dataset.py  model.py  test.py  train.py
