[project]
name = "ood_detection"
version = "1.0.0"
description = "OOD Detection --- Data Mining project."
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Jesse Senior", email = "jessesenior@outlook.com" },
    { name = "Fang Di", email = "fti@mail.scut.edu.cn" },
]

dependencies = [
    "accelerate>=0.25.0",
    "torch>=2.0.0",
    "torchvision>=0.16.0",
    "seaborn>=0.13.0",
    "pandas>=2.1.0",
    "matplotlib>=3.8.0",
    "tqdm>=4.66.0",
    "scikit-learn>=1.3.0",
    "safetensors>=0.3.0",
    "medmnist>=2.2.3",
]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
